--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,14 +88,14 @@ p {
 }
 
 .gemstones {
-    margin-left: 10px;
+    margin-left: 5px;
 }
 
 .gemstones-img {
     float: left;
     height: 10%;
     width: 10%;
-    margin: 5px;
+    margin: 10px;
 }
 
 #score-title {
@@ -122,4 +122,8 @@ p {
     display: block;
     font-size: 4vw;
     margin: 10px;
+}
+
+.gameStatusDisplay {
+    font-size: 2vw;
 }
