--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,20 +2,15 @@
 /* Class - Coding Bootcamp MW                    */
 /* Assignment #4 - Crystal Collector Game        */
 /* Author: Rod Skoglund                          */
-/* Stype Sheet for index page of Assignment #4   */
+/* Stype Sheet for of Assignment #4              */
 /* ********************************************* */
 
 body, html {
-    /* height: 100%;
-    margin: 0; */
-    /* font-family: Arial, Helvetica, sans-serif; */
     color: #ffffff;
-    /* background-color: black; */
     background-image: url("../images/crystal-background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* background-position-x: 50%; */
 }
 
 p {
@@ -48,9 +43,6 @@ p {
 
 .target-score {
     min-height: 100px;
-    /* border: black;
-    border-style: solid;
-    border-width: 5px; */
 }
 
 .clearfix::after {
@@ -67,8 +59,6 @@ p {
     color: black;
     padding-left: 1%;
     padding-top: 1%;
-    /* padding: 2% 5% 11% 2%; */
-    /* text-align: center; */
     display: block;
     font-size: 4vw;
     margin: 10px;
@@ -80,8 +70,6 @@ p {
     min-height: 96px;
     background-color: aqua;
     color: black;
-    /* padding: 0% 5% 10% 0%; */
-    /* text-align: center; */
     display: block;
     font-size: 1.5vw;
     margin: 10px;
@@ -96,14 +84,16 @@ p {
     height: 10%;
     width: 10%;
     margin: 10px;
+    font-size: 2vw;
+    font-weight: bold;
+    color: blue;
+    background-color: yellow
 }
 
 #score-title {
-    /* height: 30%; */
     width: 30%;
     background-color: darkcyan;
     color: #ffffff;
-    /* padding: 5px; */
     text-align: left;
     display: block;
     font-size: 2vw;
@@ -117,8 +107,6 @@ p {
     color: #ffffff;
     padding-left: 1%;
     padding-top: 1%;
-    /* padding: 2% 5% 11% 2%; */
-    /* text-align: center; */
     display: block;
     font-size: 4vw;
     margin: 10px;
